--- a/ConsoleColorizedHighlight/Info.plist
+++ b/ConsoleColorizedHighlight/Info.plist
@@ -35,6 +35,8 @@
 		<string>E0A62D1F-3C18-4D74-BFE5-A4167D643966</string>
 		<string>DF11C142-1584-4A99-87AC-1925D5F5652A</string>
 		<string>CA351AD8-3176-41CB-875C-42A05C7CDEC7</string>
+		<string>EE23884D-A5C0-4163-94CF-DBBF3A5ED8D6</string>
+		<string>26355AE5-C605-4A56-A79B-AD4207EA18DD</string>
 	</array>
 	<key>NSPrincipalClass</key>
 	<string></string>
